--- a/tpl/f/layout.html
+++ b/tpl/f/layout.html
@@ -105,7 +105,7 @@
                     <img src="images/qrcode.png" style="clear:both;display:block;margin-top:50px">
                 </li>
             </ul>
-            <footer>版权所有© 2014-2017 深圳市邻客网络技术有限公司 广ICP 备 081XXXXXX 号</footer>
+            <footer>版权所有© 2014-2017 邻客物流有限公司 沪ICP 备 14043888 号</footer>
         </div>
     </div>
       <div id="toTop"><a id="toTopLink"><span class="icon-arrow-up glyphicon glyphicon-arrow-up"></span></a></div>
