--- a/tpl/b/dic.cust.html
+++ b/tpl/b/dic.cust.html
@@ -322,11 +322,11 @@
 										</div><hr>
 										<div>
 											<label for="form-field-12">联系人</label>
-											<input id="form-field-12" ng-model=" addr.contact" type="text" placeholder="具体地址" class="form-control">
+											<input id="form-field-12" ng-model=" addr.contact" type="text" placeholder="联系人" class="form-control">
 										</div><hr>
 										<div>
 											<label for="form-field-13">联系电话</label>
-											<input id="form-field-13" ng-model=" addr.tel" type="text" placeholder="具体地址" class="form-control">
+											<input id="form-field-13" ng-model=" addr.tel" type="text" placeholder="联系电话" class="form-control">
 										</div><hr>
 										<div class="form-actions center">
 											<button ng-click="set_addr()" class="btn btn-sm btn-success">提交<i class="icon-arrow-right icon-on-right bigger-110"></i></button>
