--- a/tpl/b/service.callcenter.html
+++ b/tpl/b/service.callcenter.html
@@ -15,6 +15,141 @@
 					</ul>
 					<div class="tab-content">
 						<div ng-tab-body="animated fadeIn"  class="tab-pane">
+							<!--startprint-->
+							<div class="widget-box transparent invoice-box">
+								<div class="widget-header widget-header-large">								
+									<h3 class="grey lighter pull-left position-relative">
+										<i class="icon-leaf green"></i>货物运输批次合同
+									</h3>
+
+												<div class="widget-toolbar no-border invoice-info">
+													<span class="invoice-info-label">业务编号:</span>
+													<span class="red">LK0214090002</span><br>
+													<span class="invoice-info-label">签订日期:</span>
+													<span class="blue">{{Date.now() || "2014-11-11"}}</span>
+												</div>
+
+												<div class="widget-toolbar hidden-480">
+													<a ng-click="do_print()"><i class="icon-print"></i></a>
+												</div>
+											</div>
+
+											<div class="widget-body">
+												<div class="widget-main padding-24">
+													<div class="row">
+														<div class="col-sm-6">
+															<div class="row">
+																<div class="col-xs-11 label label-lg label-info arrowed-in arrowed-right">
+																	<b>甲方:{{order.cust.name || "请在右边选择"}}</b>
+																</div>
+															</div>
+															<div class="row">
+																<ul class="list-unstyled spaced">
+																	<li><i class="icon-caret-right blue"></i>{{order.cust.dist}}</li>
+																	<li><i class="icon-caret-right blue"></i>{{order.cust.address}}</li>
+																	<li><i class="icon-caret-right blue"></i>{{order.cust.contact}} {{order.cust.tel}}</li>
+																</ul>
+															</div>
+														</div><!-- /span -->
+
+														<div class="col-sm-6">
+															<div class="row">
+																<div class="col-xs-11 label label-lg label-success arrowed-in arrowed-right">
+																	<b>乙方：邻客物流有限公司</b>
+																</div>
+															</div>
+															<div>
+																<ul class="list-unstyled  spaced">
+																	<li><i class="icon-caret-right green"></i>上海市浦东新区</li>
+																	<li><i class="icon-caret-right green"></i>浦东南路588号浦发大厦28楼</li>
+																	<li><i class="icon-caret-right green"></i>罗晨艳 13917848909</li>
+																</ul>
+															</div>
+														</div><!-- /span -->
+													</div><!-- row -->
+													<hr>
+													<ul class="list-unstyled  spaced">
+													<li><i class="icon-caret-right red"></i>装货地址:{{order.infos.from.dist || "请在右侧选择" }}{{order.infos.from.address}}{{order.infos.from.company}} ... {{order.infos.from.contact}} {{order.infos.from.tel}}</li>
+													<li><i class="icon-caret-right red"></i>到货地址:{{order.infos.to.dist || "请在右侧选择"}}{{order.infos.to.address}}{{order.infos.to.company}} ... {{order.infos.to.contact}} {{order.infos.from.tel}}</li>
+													</ul>
+
+													<div>
+														<table class="table table-striped table-bordered">
+															<thead>
+																<tr>
+																	<th class="center">#</th>
+																	<th>物品名称</th>
+																	<th class="hidden-xs">包装属性</th>
+																	<th>件数</th>
+																	<th class="hidden-480">体积(方)</th>
+																	<th class="hidden-480">重量(吨)</th>
+																</tr>
+															</thead>
+
+															<tbody>
+																<tr ng-repeat="item in order.infos.goods">
+																	<td class="center">{{$index + 1}}</td>
+																	<td>{{item.title}}</td>
+																	<td class="hidden-xs">{{item.pkgmaterial}}{{item.pkgholder}}</td>
+																	<td>{{item.piece}}</td>
+																	<td class="hidden-480">{{item.volume}}</td>
+																	<td class="hidden-480">{{item.weight}}</td>
+																</tr>
+															</tbody>
+														</table>
+													</div>
+													<div class="row">
+														<div class="col-sm-6">
+															<div class="row">
+																<ul class="list-unstyled spaced">
+																	<li><i class="icon-caret-right blue"></i>装货时间:{{order.cust.infos.fdate || "2014-11-11"}}</li>
+																	<li><i class="icon-caret-right blue"></i>投保货值(万):{{order.cust.infos.worth || 50}}</li>
+																</ul>
+															</div>
+														</div><!-- /span -->
+														<div class="col-sm-6">
+															<div class="row">
+																<ul class="list-unstyled  spaced">
+																	<li><i class="icon-caret-right green"></i>到货时间:{{order.cust.infos.fdate || "2014-11-13"}}</li>
+																	<li><i class="icon-caret-right green"></i>投保方: 乙方</li>
+																</ul>
+															</div>
+														</div><!-- /span -->
+													</div><!-- row -->
+
+													<div class="hr hr8 hr-double hr-dotted"></div>
+
+													<div class="row">
+														<div class="col-sm-5 pull-right">
+															<h4 class="pull-right">总费用 : <span class="red">￥{{order.totalfee || 30960}}元</span></h4>
+														</div>
+														<div class="col-sm-7 pull-left"> 月结 、单价 ￥860/吨 </div>
+													</div>
+
+													<div class="space-6"></div>
+													<div class="well">
+														承运方的义务和权利
+1、从货物装运时起，至货物运抵到达交付完毕为止，货物运输安全由承运人承担，承运人无权处置，变卖所运货物。如自行处置，视同盗窃、诈骗，除加倍赔偿托运方损失外，并移交司法部门处置。
+2、在运输途中，货物丢失、短少、雨淋、损坏（受车祸、机械事故影响）承运人应承担责任。
+3、如遇人力不可抗拒的自然灾害，所耽误的时间，承运人不承担责任，但必须及时通知托运方。
+4、正常运行中或在规定时间内到达，非承运人过错，如货物发生变质、腐烂，承运人不承担责任。
+托运方的义务和权利
+1、托运方有权要求承运方按照协议规定的时间、地点，把货物运输到目的地。在承运人将货物交付收货人之前，托运人可以请求承运人终止运输、返还货物，变更到达地或者将货物交给其他收货人，但应当补偿承运人因此受的损失。
+2、托运方的义务：按约定向承运方交付运杂费。否则，承运方有权停止运输，并要求对方支付违约金。托运方对托运的货物，应按照规定的标准进行包装，遵守有关运输规定，按照协议中规定的时间、地点和数量交付托运货物。
+3、如整车货物丢失，承运方全价赔偿托运方（按货物总价计），并承担托运方损失费。
+4、由于在普通货物中夹带、匿报危险货物，错报笨重货物重量等而招致吊具断裂、货物摔损、吊机倾翻、爆炸、腐蚀等事故，托运方应承担赔偿责任。
+其他说明
+1、承运方提供真实有效的货运信息，不承担买卖双方经济纠纷；2、本协议如有违约或纠纷，以《物流服务协议》约定的方式处理；
+3、本协议有效期为：货到终点地，交付完毕为止；4、本协议一式俩份，甲乙双方双执一份，签字生效负法律责任； 
+5、本协议未尽事宜，请参见《物流服务协议》；6、如运输贵重物品，建议托运方办理运输保险。
+7、如本协议作为《物流服务协议》的附件，在俩者有冲突的情况下，以《物流服务协议》为准；8、运费结算的计费数量以《出库单》数据为准。
+9、本协议传真件与原件具有同等法律效力；10.上述报价为含税报价。
+													</div>
+												</div>
+											</div>
+										</div>
+							<!--startprint-->
+
 							<form class="form-horizontal" role="form">
 								<fieldset>
 									<legend>订单信息</legend>
